ProjetCompil/Gencode/Test/fail/asm/simble-fail.ass
; ----------------------------------------------------------------------
; -----------                      Programme généré par JCasc-----------
; ----------------------------------------------------------------------
   ADD #0, LB 
   ADDSP #0 
indexoutofbound: 
   WSTR "ERREUR Index Out Of Bound" ; 
   HALT 
   HALT 
